@@ -14,12 +14,10 @@
 	<string id="30036">1%</string>
 	<string id="30037">Stažené soubory</string>
 	<string id="30050">Kvalita videa</string>
-	<string id="30051">Zeptat se</string>
-	<string id="30052">Nejlepší</string>
-	<string id="30053">Nejhorší</string>
-	<string id="30054">720p</string>
-	<string id="30055">480p</string>
-	<string id="30056">360p</string>
+	<string id="30051">Nejlepší</string>
+	<string id="30052">SD</string>
+	<string id="30053">720p</string>
+	<string id="30054">1080p</string>
 	<string id="30058">Filtruj vp8 videa</string>
 	<string id="30059">*Přehrát vše*</string>
 	<string id="30060">Podobná videa</string>
