@@ -15,12 +15,10 @@
 	<string id="30036">1%</string>
 	<string id="30037">Downloads</string>
 	<string id="30050">Video quality</string>
-	<string id="30051">Always ask</string>
-	<string id="30052">Best</string>
-	<string id="30053">Worst</string>
-	<string id="30054">720p</string>
-	<string id="30055">480p</string>
-	<string id="30056">360p</string>
+        <string id="30051">Best</string>
+	<string id="30052">SD</string>
+	<string id="30053">720p</string>
+	<string id="30054">1080p</string>
 	<string id="30058">Filter vp8 videos</string>
 	<string id="30059">*Play all*</string>
 	<string id="30060">Related videos</string>
