@@ -1,3 +1,5 @@
+[B]0.0.4:[/B]
+Use Youtube-dl to resolve URLs
 [B]0.0.3:[/B]
 Fix for any videos
 [B]0.0.1:[/B]
